# sheeet

./: .gitignore  .trunk.toml  Cargo.toml  LICENSE  README.md  index.html  zerops-import.yml  zerops.yml
api/: Cargo.toml
api/src/: main.rs  user.html
assets/: security-isolation-brainstorm.md
funcs/: Cargo.toml  README.md
funcs/src/: fetch.rs  lib.rs
site/: index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs  main.rs
wasm/: .trunk.toml  Cargo.toml  README.md  index.css  index.html
wasm/assets/: controls.js  index.css  wasm.js
wasm/src/: expression.rs  lib.rs  main.rs  reference.rs  state.rs
