[package]
name = "sheetdb"
version = "0.1.0"
edition = "2024"
authors = ["Matěj Pavlíček <tikinang@gmail.com>"]
description = "Spreadsheet powered by Rust and WebAssembly."
license = "MIT/Apache-2.0"
repository = "https://github.com/tikinang/sheetdb"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"

# This will be in the user crate.
[lib]
crate-type = ["cdylib"]
name = "test"

[profile.release]
opt-level = "s"
