[package]
name = "sheeet-api"
version = "0.1.0"
edition = "2024"
authors = ["Matěj Pavlíček <tikinang@gmail.com>"]
description = "Rust and WebAssembly powered spreadsheet."
license = "MIT/Apache-2.0"
repository = "https://github.com/tikinang/sheeet"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
web-sys = { version = "0.3.77", features = ["console"] }
