[package]
name = "sheeet-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
env_logger = "0.11.8"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
bytes = "1.10.1"
serde_json = "1.0.140"
log = "0.4.27"
tokio = "1.45.1"
