[package]
name = "sheeet-funcs"
version = "0.1.3"
edition = "2024"
description = "Sheeet! base functions crate."
license = "MIT"
repository = "https://github.com/tikinang/sheeet"
homepage = "https://sheeet.matejpavlicek.cz"

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { optional = true, version = "0.4.50" }
web-sys = { optional = true, version = "0.3.77", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }

[features]
fetch = ["wasm-bindgen-futures", "web-sys"]