[package]
name = "sheeet-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Matěj Pavlíček <tikinang@gmail.com>"]
description = "Rust and WebAssembly powered spreadsheet."
license = "MIT/Apache-2.0"
repository = "https://github.com/tikinang/sheeet"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }

