[package]
name = "sheeet-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
js-sys = { version = "0.3.77", features = ["default"] }
web-sys = { version = "0.3.77", features = ["console", "default", "Document", "Element", "HtmlElement", "Node", "Window", "HtmlTableElement", "HtmlTableCellElement", "HtmlTableColElement", "HtmlTableRowElement", "Storage"] }

